syntax = "proto3";

                 package gameEventGameObjectQuest;
service GameEventGameObjectQuestService {
 rpc createGameEventGameObjectQuest (GameEventGameObjectQuestCreateInput) returns (GameEventGameObjectQuest) {}
rpc gameEventGameObjectQuests (findManyParams) returns (stream GameEventGameObjectQuest) {}
rpc gameEventGameObjectQuest (GameEventGameObjectQuestWhereUniqueInput) returns (GameEventGameObjectQuest) {}
rpc updateGameEventGameObjectQuest (GameEventGameObjectQuestUpdateInput) returns (GameEventGameObjectQuest) {}
rpc deleteGameEventGameObjectQuest (GameEventGameObjectQuestWhereUniqueInput) returns (GameEventGameObjectQuest) {} 
 }
message GameEventGameObjectQuestCreateInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 quest = 4;
string updatedAt = 5;
};
message GameEventGameObjectQuest {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 quest = 4;
string updatedAt = 5;
};
message GameEventGameObjectQuestWhereUniqueInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 quest = 4;
string updatedAt = 5;
};
message GameEventGameObjectQuestUpdateInput {
string createdAt = 1;
int32 eventEntry = 2;
string id = 3;
int32 quest = 4;
string updatedAt = 5;
};
message findManyParams {

};